Adding Spring Boot configuration...